# Verity

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/superpowers/specs/: 2026-06-20-verity-workflow-and-models.md
examples/: basic_examples.py  evaluate_rag.py  generate_testset.py
tests/: test_embedding_detector.py  test_eval_runner.py  test_interrogation_clients.py  test_interrogation_connector.py  test_interrogation_generator.py  test_interrogation_llm_generator.py  test_interrogation_pinecone.py  test_interrogation_pipeline.py  test_interrogation_testset.py  test_interrogation_testset_generator.py  test_metrics_answer_relevance.py  test_metrics_context_relevance.py  test_metrics_faithfulness.py  test_nli_detector.py  test_package_imports.py
verity/: __init__.py  evaluator.py  runner.py  schemas.py
verity/detectors/: __init__.py  base.py  embeddings.py  nli.py
verity/interrogation/: __init__.py  clients.py  connector.py  generator.py  llm_generator.py  pinecone_connector.py  pipeline.py  testset.py  testset_generator.py
verity/metrics/: answerrelevance.py  contextrelevance.py  faithfulness.py
verity_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
