[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verity-eval"
version = "0.1.0"
description = "Ground truth for LLM outputs — local-first RAG evaluation"
authors = [{ name = "Koustav Manna" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
local = [          # heavy ML models — only if you run local detectors
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
]
llm = [            # LLM escalation + question generation
    "openai>=1.0.0",
    "anthropic>=0.40.0",
]
pinecone = [       # vector-DB connector for test-set generation
    "pinecone>=5.0.0",
]
all = ["verity-eval[local,llm,pinecone]"]
dev = ["pytest>=7.0", "python-dotenv>=1.0.0"]

[tool.setuptools.packages.find]
include = ["verity*"]
